# ncs-playground

./: README.md
bluetooth/central_scanner/: prj.conf
bluetooth/central_scanner/src/: main.c
misc/Thingy91-gateway-NCS_v1.4-prototype/boards/arm/thingy91_nrf52840/: Kconfig  Kconfig.defconfig  board.c
misc/Thingy91-gateway-NCS_v1.4-prototype/boards/arm/thingy91_nrf9160/: CMakeLists.txt  Kconfig  nrf52840_reset.c
misc/Thingy91-gateway-NCS_v1.4-prototype/samples/bluetooth/hci_lpuart/: prj.conf
nrfx/pwm/src/: main.c
samples/gpio_test/: CMakeLists.txt  nrf9160dk_nrf9160ns.overlay  prj.conf
samples/gpio_test/child_image/spm/: prj.conf
samples/gpio_test/src/: main.c
samples/gpiote_rtc_toggle/: CMakeLists.txt  nrf5340dk_nrf5340_cpuapp.overlay  prj.conf
samples/gpiote_rtc_toggle/src/: main.c
samples/i2c_scanner/: nrf9160dk_nrf9160ns.overlay  prj.conf
samples/i2c_scanner/src/: main.c
samples/nrfx_rtc/: CMakeLists.txt  prj.conf
samples/nrfx_rtc/src/: main.c
samples/pulse_detector/: CMakeLists.txt  prj.conf
samples/pulse_detector/src/: main.c
samples/qdec_test/: prj.conf
samples/qdec_test/src/: main.c
samples/spi_test/: nrf9160dk_nrf9160ns.overlay  prj.conf
samples/spi_test/src/: main.c
samples/spis_test/src/: main.c
samples/spis_thread_test/: nrf52840dk_nrf52840.overlay  nrf5340pdk_nrf5340_cpuapp.overlay  nrf9160dk_nrf9160ns.overlay  prj.conf
samples/spis_thread_test/src/: main.c
samples/timing/: CMakeLists.txt  prj.conf
samples/timing/child_image/: hci_rpmsg.conf
samples/timing/src/: main.c
snippets/: README.md
(+7 files in other folders)
